<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintEventDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".view.DetailedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/myToolbarTHeme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/movie_details"
            android:textColor="@color/White"
            android:textSize="22sp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@drawable/bottom_dropshadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view7">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgPoster"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view8"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:background="@drawable/bottom_dropshadow"
                    app:layout_constraintEnd_toEndOf="@+id/imgPoster"
                    app:layout_constraintStart_toStartOf="@+id/imgPoster"
                    app:layout_constraintTop_toBottomOf="@+id/imgPoster" />

                <ir.alirezabdn.wp7progress.WP7ProgressBar
                    android:id="@+id/Detailwp7progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:animationDuration="2000"
                    app:indicatorColor="@color/colorPrimary"
                    app:indicatorHeight="7"
                    app:indicatorRadius="5"
                    app:interval="100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view8" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblMovieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:lineSpacingExtra="2dp"
                    android:text="- - -"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/lblYear"
                    app:layout_constraintStart_toStartOf="@+id/imgPoster"
                    app:layout_constraintTop_toBottomOf="@+id/Detailwp7progressBar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="end"
                    android:text="- - -"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imgPoster"
                    app:layout_constraintTop_toBottomOf="@+id/Detailwp7progressBar"
                    app:layout_constraintWidth_percent="0.3" />

                <View
                    android:id="@+id/view9"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/LightGrey"
                    app:layout_constraintEnd_toEndOf="@+id/lblYear"
                    app:layout_constraintStart_toStartOf="@+id/lblMovieTitle"
                    app:layout_constraintTop_toBottomOf="@+id/lblMovieTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblPlot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:lineSpacingExtra="5dp"
                    android:text="- - -"
                    android:textColor="@color/Gray"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/view9"
                    app:layout_constraintStart_toStartOf="@+id/view9"
                    app:layout_constraintTop_toBottomOf="@+id/view9" />

                <View
                    android:id="@+id/view10"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/LightGrey"
                    app:layout_constraintEnd_toEndOf="@+id/lblPlot"
                    app:layout_constraintStart_toStartOf="@+id/lblPlot"
                    app:layout_constraintTop_toBottomOf="@+id/lblPlot" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblEventDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:text="@string/movie_details"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/view10"
                    app:layout_constraintTop_toBottomOf="@+id/view10" />

                <View
                    android:id="@+id/view11"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/LightGrey"
                    app:layout_constraintEnd_toEndOf="@+id/lblEventDetails"
                    app:layout_constraintStart_toStartOf="@+id/lblEventDetails"
                    app:layout_constraintTop_toBottomOf="@+id/lblEventDetails" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/view10"
                    app:layout_constraintStart_toStartOf="@+id/lblPlot"
                    app:layout_constraintTop_toBottomOf="@+id/view11">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblReleased"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="start"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/released"
                            android:textColor="@color/LightGrey"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblReleasedAnswer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="start"
                            android:lineSpacingExtra="5dp"
                            android:text="- - -"
                            android:textColor="@color/Black"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lblReleased" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblLanguage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="start"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/language"
                            android:textColor="@color/LightGrey"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lblReleasedAnswer" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblLanguageAnswer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="start"
                            android:lineSpacingExtra="5dp"
                            android:text="- - -"
                            android:textColor="@color/Black"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lblLanguage" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblGenre"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="start"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/genre"
                            android:textColor="@color/LightGrey"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblGenreAnswer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="start"
                            android:lineSpacingExtra="5dp"
                            android:text="- - -"
                            android:textColor="@color/Black"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lblGenre" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ir.alirezabdn.wp7progress.WP10ProgressBar
        android:id="@+id/DetailWp10progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:animationDuration="1500"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorHeight="7"
        app:indicatorRadius="5"
        app:interval="160"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noDataConstraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblTypeHere"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:lineSpacingExtra="5dp"
            android:text="@string/no_movie_data_found_for_this_title"
            android:textColor="@color/Black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgNoData"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTypeHere"
            app:layout_constraintWidth_percent="0.3"
            app:srcCompat="@drawable/ic_no_data_found" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>